# ai-learning-enhanced-tracking

./: .gitignore  CMakeLists.txt  README.md
data/: dataset_summary.txt
data/runs/clutter_seed10167/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed10336/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed11167/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed11336/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed1167/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed1336/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed167/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed2167/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed2336/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed3167/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed3336/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed336/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed4167/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed4336/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed5167/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed5336/: diag.csv  est.csv  meas.csv  meta.csv
data/runs/clutter_seed6167/: diag.csv  est.csv  meas.csv  (+1 more)
reports/: smoke_hash.txt
scripts/: expected.txt  smoke.sh
src/: main.cpp
src/sim/: sim.cpp  sim.h
src/tracking/: adaptive_tuning.cpp  adaptive_tuning.h  kalman.cpp  kalman.h
src/util/: csv.h  fnv1a.h
tools/: eval.py  make_dataset.py  train.py
(+318 files in other folders)
